angular connection errors fixed, services updated and methods created.
